Change global styles and add site-header

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scilled</title>
 
     <!-- STYLES -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <header class="site-header">
+        <div class="site-header__container container">
+            <a class="site-header__logo-link" href="#">
+                 <img class="site-header__logo" src="img/skilled.svg" alt="loopstudios logo" width="111" height="28">
+            </a>
+            <a class="btn" href="#">Get Started</a>
+        </div>
+    </header>
 </body>
 </html>
