--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <!-- Site-header -->
     <header class="site-header">
         <div class="site-header__container container">
             <a class="site-header__logo-link" href="#">
@@ -19,5 +20,33 @@
             <a class="btn" href="#">Get Started</a>
         </div>
     </header>
+
+    <!-- Main -->
+    <main class="main-content">
+        <div class="container">
+            <div class="hero">
+                <div class="hero__content">
+                    <h2 class="hero__heading">Maximize skill, minimize budget</h2>
+                    <p class="hero__main-text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+                    <a class ="btn btn--orange" href="#">Get Started</a>
+                </div>
+                <img class="hero__img-girl" src="img/girl.svg" alt="Girl with computer" width="317" height="560">
+                <img class="hero__img-ellips" src="img/ellips.svg" alt="Girl with computer">
+
+                <!-- Course -->
+                <span class="hero__course course">
+                    <strong class="course__text">Course text</strong>
+                    <br>
+                    <strong class="course__number">1,451</strong>
+                </span>
+                <span class="hero__course course course--members">
+                    <strong class="course__text">Members</strong>
+                    <br>
+                    <strong class="course__number">29k</strong>
+                </span>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
