--- a/index.html
+++ b/index.html
@@ -30,20 +30,22 @@
                     <p class="hero__main-text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
                     <a class ="btn btn--orange" href="#">Get Started</a>
                 </div>
-                <img class="hero__img-girl" src="img/girl.svg" alt="Girl with computer" width="317" height="560">
+                <div class="hero__img-wrapper">
+                    <img class="hero__img-girl" src="img/girl.svg" alt="Girl with computer" width="317" height="560">
+                    <!-- Course -->
+                    <span class="hero__course course">
+                        <strong class="course__text">Course text</strong>
+                        <br>
+                        <strong class="course__number">1,451</strong>
+                    </span>
+                    <span class="hero__course course course--members">
+                        <strong class="course__text">Members</strong>
+                        <br>
+                        <strong class="course__number">29k</strong>
+                    </span>
+                </div>
                 <img class="hero__img-ellips" src="img/ellips.svg" alt="Girl with computer">
                 
-                <!-- Course -->
-                <span class="hero__course course">
-                    <strong class="course__text">Course text</strong>
-                    <br>
-                    <strong class="course__number">1,451</strong>
-                </span>
-                <span class="hero__course course course--members">
-                    <strong class="course__text">Members</strong>
-                    <br>
-                    <strong class="course__number">29k</strong>
-                </span>
             </div>
             
             <!-- List -->
